# Nexus-AI-trading

./: CODE_OF_CONDUCT.md  GATEWAY_IMPLEMENTATION_PLAN.md  GATEWAY_QUICK_START.md  IMPLEMENTATION_ROADMAP.txt  INTEGRATION_COMPLETE.md  INTEGRATION_STATUS.md  MQScore_6D_Engine_v3.py  Multi-Timeframe Alignment Strategy.py  NEXUS_AI_COMPLETE_ANALYSIS.md  Order Book Imbalance Strategy.py  QUICK_START.md  README.md  SECURITY.md  absorption_breakout.py  cumulative_delta.py  debug_trade_creation.py  demo_backtest.py  momentum_breakout.py  nexus_ai -BK.py  nexus_ai.py  nexus_backtester.py  nexus_grpc_server.py  nexus_grpc_server_live.py  nexus_grpc_server_simple_live.py  optimize_parameters.py  run_backtest.py  simple_trade_demo.py  stop_run_anticipation.py  test_aggressive_backtest.py  test_momentum_breakout_demo.py  test_spoofing_detection_demo.py  test_spoofing_detection_live_ready.py  volume_imbalance.py
.github/: PULL_REQUEST_TEMPLATE.md
BEST_UNIQUE_MODELS/: DEEP_ANALYSIS_REPORT.md  DEEP_ANALYSIS_RESULTS.json  DEEP_NON_ONNX_REPORT.md  DEEP_NON_ONNX_RESULTS.json  REORGANIZATION_REPORT.txt  REORGANIZE_MODELS.md
Communication/: __init__.py
NEXUS_BACKUP_2025-10-24_07-47-05/: BACKUP_REPORT.md  CONTRIBUTING.md  LICENSE  final_organization_summary.md  model_integration_complete_summary.md  nexus_ai.py  nexus_aiV1.py  pipeline_test_results.md  requirements-dev.txt  strategies_organization_report.md  test_nexus_pipeline.py
PIPline/: 02_ML_PIPELINE.md  (+27 more)
sierra_chart/: BUILD_STATUS.md  CMakeLists.txt  INSTALL_SUCCESS.md  NexusAI.exp  NexusAI.lib  NexusAI_Complete.cpp  README.md  TROUBLESHOOTING.md  build.bat  build_cmake.bat  copy_dlls.bat  generate_proto.bat  install_grpc.bat  nexus_trading.grpc.pb.cc  nexus_trading.grpc.pb.h  nexus_trading.pb.cc  nexus_trading.pb.h
sierra_chart/build_lite/: CMakeCache.txt
(+85 files in other folders)
